# sssom-py

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  cli.md  cli_usage.html  documentation.html  environment.sh  examples.html  genindex.html  index.html  installation.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyproject.toml.rej  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  sitemap.xml  sphinx.html  sphinx_documentation.html  sssom.html  test.tsv  test_filtered.tsv  test_validation.tsv  tests.html  tox.ini
.github/workflows/: deploy-docs.yml  deploy-docs.yml.rej  doc_pages.yml  pypi-publish.yml  qc.yml  update_context.yml
_modules/: enum.html  functools.html  index.html  typing.html
_modules/sssom/: cli.html  cliques.html  constants.html  context.html  io.html  parsers.html  rdf_util.html  sparql_util.html  sssom_datamodel.html  sssom_document.html  typehints.html  util.html  validators.html  writers.html
_modules/tests/: test_cli.html  test_collapse.html  test_conversion.html  test_data.html  test_reconcile.html  test_scc.html
_sources/: examples.rst.txt  index.rst.txt  installation.rst.txt  sphinx.rst.txt  sssom.rst.txt  tests.rst.txt
_sources/developer_docs/: api.rst.txt  modules.rst.txt
_sources/install/: installation.rst.txt
_sources/technical_docs/: cli.rst.txt  cliques.rst.txt  cliquesummary.rst.txt  context.rst.txt  io.rst.txt  parsers.rst.txt  rdf_util.rst.txt  sparql_util.rst.txt  sssom_document.rst.txt  technical.rst.txt  validators.rst.txt  writers.rst.txt
_static/: documentation_options.js
api/: index.html
api/constants/: index.html
api/io/: index.html
api/parsers/: index.html
api/rdf_util/: index.html
api/util/: index.html
api/validators/: index.html
api/writers/: index.html
cli/: index.html
cli/commands/: index.html
contributing/: index.html
developer_docs/: api.html  modules.html  setup.html  sphinx.html  sssom.html
docs/: MappingSet.md  MappingSet.rst  cli_usage.html  cli_usage.rst  conf.py  contributing.md  create-mapping-commons.md  documentation.html  documentation.rst  examples.html  examples.rst  genindex.html  index.html  index.md  index.rst  installation.html  installation.md  installation.rst  modules.html  modules.rst  objects.inv  parsers.rst  py-modindex.html  quickstart.md  search.html  searchindex.js  setup.html  sphinx_documentation.html  sssom.html  sssom.rst  tests.html
docs/_modules/: index.html
docs/_sources/: cli_usage.rst.txt  documentation.rst.txt  index.rst.txt  installation.rst.txt
docs/_static/: documentation_options.js
docs/api/: constants.md  index.md  io.md  parsers.md  rdf_util.md  util.md  validators.md  writers.md
docs/cli/: commands.md  index.md
docs/developer_docs/: api.rst  modules.rst  sphinx.rst  sssom.rst
docs/install/: installation.rst
docs/technical_docs/: cliques.rst  cliquesummary.rst  context.rst  developer.rst  parsers.rst  rdf_util.rst  sparql_util.rst  sssom_document.rst  technical.rst  util.rst  validators.rst  writers.rst
doctrees/: cli_usage.doctree  documentation.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  modules.doctree  setup.doctree  sphinx_documentation.doctree  sssom.doctree  tests.doctree
html/: .buildinfo  cli_usage.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
html/_sources/: modules.rst.txt
install/: installation.html
installation/: index.html
quickstart/: index.html
schema/: cliquesummary.yaml  fhir_json.csv  sssom.context.jsonld  sssom.graphql  sssom.owl  sssom.schema.json  sssom.shex  sssom.yaml  sssom_datamodel.py
schema/sssom-docs/: Entity.md  Mapping.md  MappingSet.md  comment.md  confidence.md  creator_id.md  creator_label.md  equivalent_property.md  id.md  index.md  information_content_mica_score.md  license.md  mapping_date.md  mapping_provider.md  mapping_set_id.md  mapping_set_version.md  mapping_tool.md  mappings.md  match_string.md  match_term_type.md  match_type.md  metadata_element.md  object_category.md  object_id.md  object_label.md  object_match_field.md  object_preprocessing.md  object_source.md  object_source_version.md  other.md  predicate_id.md  predicate_label.md  rdf_example.md  required.md  scope.md  see_also.md  semantic_similarity_score.md  subject_category.md  subject_id.md  subject_label.md  (+5 more)
search/: search_index.json
sphinx/: cli_usage.rst  conf.py  developer.rst  index.rst  installation.rst  modules.rst  sphinx_documentation.rst  sssom.rst  tests.rst
src/sssom/: __init__.py  cli.py  cliques.py  cliquesummary.py  constants.py  context.py  internal_context.py  io.py  logging.py  obo.epm.json  parsers.py  rdf_internal.py  rdf_util.py  sexpr.py  sparql_util.py  (+5 more)
sssom/: __init__.py  __main__.py  cli.py  cliques.py  cliquesummary.py  constants.py  context.py  datamodel_util.py  external_context.py  internal_context.py  inverse_map.yaml  io.py  parsers.py  prefix_reconciliation.yaml  rdf_util.py  schema.py  sparql_util.py  sssom.context.jsonld  sssom.yaml  sssom_datamodel.py  sssom_document.py  typehints.py  util.py  validators.py  writers.py
sssom-0.3.9.dev0/: PKG-INFO  README.md  pyproject.toml  setup.cfg
technical_docs/: cli.html  cliques.html  cliquesummary.html  context.html  io.html  parsers.html  rdf_util.html  sparql_util.html  sssom_document.html  technical.html  util.html  validators.html  writers.html
tests/: README.md  __init__.py  constants.py  test.owl  test_annotate.py  test_cli.py  test_collapse.py  test_config.yaml  test_context.py  test_conversion.py  test_convert.py  test_correlation.py  test_data.py  test_datamodel_util.py  test_filter.py  test_merge.py  test_model.py  test_parse.py  test_parsers.py  test_prefixes.py  test_reconcile.py  test_resources.py  test_rewire.py  test_scc.py  test_schemaview.py  test_semra_compatibility.py  test_sexpr.py  test_sort.py  test_utils.py  test_validate.py  test_writers.py  testing_filters.py  tests.sh  update_validate_data.sh
(+123 files in other folders)
