[project]
name = "sssom"
version = "0.0.0"
description = "Operations on SSSOM mapping tables"
authors = [
    { name = "Chris Mungall", email = "cjmungall@lbl.gov" },
    { name = "Nicolas Matentzoglu", email = "nicolas.matentzoglu@gmail.com" },
    { name = "Harshad Hegde", email = "hhegde@lbl.gov" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9,<4.0.0"

dependencies = [
    "click>=8.1.6",
    "curies>=0.10.20",
    "linkml-runtime>=1.7.5",
    "linkml>1.7.10",
    "pandas>1.0.3",
    "sssom-schema==1.0.0",
    "sparqlwrapper>=2.0.0",
    "validators>=0.20.0",
    "deprecation>=2.1.0",
    "pyyaml>=6.0.1",
    "rdflib>=6.0.0",
    "importlib-resources>=6.1.1",
]

# see https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project.optional-dependencies]
networkx = [
    "networkx>=3.1",
]
pansql = [
    "pansql>=0.0.1",
]
scipy = [
    "scipy",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.2.0",
    "sphinx-click>=4.3.0",
    "myst-parser>=0.18.1",
]

[project.scripts]
sssom = "sssom.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = {version = ">=7.1.2"}
tox = {version = ">=3.25.1"}

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[[tool.mypy.overrides]]
 module = [
     'sssom.sssom_datamodel',
     'sssom.cliquesummary'
 ]
 ignore_errors = true
    

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
