##########################
# Setup.py Configuration #
##########################
[metadata]
name = sssom
version = 0.14.14-dev
description = Expansion of lookup tables for controlled terms
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/cmungall/sssom
download_url = https://github.com/cmungall/sssom/releases
project_urls =
    Bug Tracker = https://github.com/cmungall/sssom/issues
    Source Code = https://github.com/cmungall/sssom
    Documentation = https://sssom.readthedocs.io

# Author information
author = Chris Mungall
author_email = cjmungall@lbl.gov
maintainer = Chris Mungall
maintainer_email = cjmungall@lbl.gov

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Ontologies
    Indexing

[options]
install_requires =
    click
    rdflib
    pyyaml
    jsonasobj
    pandas
    linkml
    scipy
    validators
    networkx
    pandasql
    sparqlwrapper
    jsonasobj~=1.2.1
    recommonmark>=0.7


# Random options
zip_safe = false
include_package_data = True


python_requires = >=3.6

# Where is my code
packages = find:
#package_dir =
#    = .


[options.package_data]
schema = schema/*
jsonld = *.jsonld
* = *.jsonld, sssom/*.jsonld


#[options.packages.find]
#where = .

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click

[options.entry_points]
console_scripts =
    sssom = sssom.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = sssom
omit =
    sssom/__main__.py
    sssom/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    sssom
    .tox/*/lib/python*/site-packages/sssom

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__


#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# Line length
    E501
