##########################
# Setup.py Configuration #
##########################
[metadata]
name = sssom
version = 0.3.25
description = Operations on SSSOM mapping tables
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/mapping-commons/sssom
download_url = https://github.com/mapping-commons/sssom-py/releases
project_urls =
    Bug Tracker = https://github.com/mapping-commons/sssom-py/issues
    Source Code = https://github.com/mapping-commons/sssom-py/
    Documentation = https://mapping-commons.github.io/sssom-py

# Author information
author = Chris Mungall
author_email = cjmungall@lbl.gov
maintainer = Chris Mungall
maintainer_email = cjmungall@lbl.gov

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Ontologies
    Indexing
    Ontology Mapping

[options]
install_requires =
    pyparsing
    bioregistry
    click
    deprecation
    linkml
    networkx
    numpy
    pandas
    pansql
    pyyaml
    rdflib>=6
    scipy
    setuptools
    sparqlwrapper
    sssom-schema
    validators
    validators>=0.0
    
include_package_data = True

# Random options
zip_safe = false



python_requires = >=3.7

# Where is my code
packages = find:
#package_dir =
#    = .


[options.package_data]
schema = schema/*
jsonld = *.jsonld
* = *.jsonld, sssom/*.jsonld


#[options.packages.find]
#where = .

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click
    recommonmark

[options.entry_points]
console_scripts =
    sssom = sssom.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = sssom
omit =
    sssom/__main__.py
    sssom/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    sssom
    .tox/*/lib/python*/site-packages/sssom

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__


#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E501 # Line length
    W503 # Line break before binary operator (flake8 is wrong)
    S408 # don't worry about unsafe xml
    S324 # Use of weak MD4, MD5, or SHA1 hash for security. Consider usedforsecurity=False
    S318 # don't worry about unsafe xml
    S310 # TODO remove this later and switch to using requests
    B018 # This is 'useless' statements which are new atm.
exclude =
    sssom/sssom_datamodel.py
    sssom/cliquesummary.py

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
